--- a/css/carousel.css
+++ b/css/carousel.css
@@ -96,23 +96,23 @@
 
 
 .card:nth-of-type(1) .image-container {
-   background-image: url("/images/mix.jpg");
+   background-image: url("../images/mix.jpg");
 }
 
 .card:nth-of-type(2) .image-container {
-   background-image: url("/images/choccereal.jpg");
+   background-image: url("../images/choccereal.jpg");
 }
 
 .card:nth-of-type(3) .image-container {
-   background-image: url("/images/healthycereal.jpg");
+   background-image: url("../images/healthycereal.jpg");
 }
 
 .card:nth-of-type(4) .image-container {
-   background-image: url("/images/fruitcereal.jpg");
+   background-image: url("../images/fruitcereal.jpg");
 }
 
 .card:nth-of-type(5) .image-container {
-   background-image: url("/images/sugary.png");
+   background-image: url("../images/sugary.png");
 }
 
 
