--- a/css/favcarousel.css
+++ b/css/favcarousel.css
@@ -96,23 +96,23 @@
 
 
 .card:nth-of-type(1) .image-container {
-   background-image: url("/images/krave.png");
+   background-image: url("../images/krave.png");
 }
 
 .card:nth-of-type(2) .image-container {
-   background-image: url("/images/chowheats.png");
+   background-image: url("../images/chowheats.png");
 }
 
 .card:nth-of-type(3) .image-container {
-   background-image: url("/images/hboo.png");
+   background-image: url("../images/hboo.png");
 }
 
 .card:nth-of-type(4) .image-container {
-   background-image: url("/images/cchocula.png");
+   background-image: url("../images/cchocula.png");
 }
 
 .card:nth-of-type(5) .image-container {
-   background-image: url("/images/chex.png");
+   background-image: url("../images/chex.png");
 }
 
 
