--- a/css/carousel.css
+++ b/css/carousel.css
@@ -47,7 +47,7 @@
    --card-width: 80%;
    --card-max-width: 280px;
    --card-height: 350px;
-   --carousel-min-width: 600px;
+   --carousel-min-width: 330px;
    z-index: 1;
    position: relative;
    margin: 0 auto;
@@ -57,12 +57,13 @@
    transition: filter .3s ease;
 }
 
+/*
 @media screen and (max-width: 640px) {
    .card-carousel {
       margin-left: calc((100vw - var(--carousel-min-width) - 40px) / 2)
    }
 }
-
+*/
 .card-carousel.smooth-return {
    transition: all .2s ease;
 }
